fixed stackoverflow

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -15,7 +15,7 @@ body {
 }
 
 .welcome-container {
-  background-image: url("http://res.cloudinary.com/smilejl/image/upload/q_100/v1500589543/aperture-vintage-212345_gtnz6b.jpg");
+  background-image: url("http://res.cloudinary.com/smilejl/image/upload/v1500589543/2017-7-21/aperture-vintage-212345_gtnz6b.jpg");
   height: 100vh;
   width: 100vw;
   background-position: center;
